[project]
name = "tk3u8"
version = "0.1.1"
description = "A TikTok live downloader, written in Python."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "rich-argparse>=1.7.0",
    "toml>=0.10.2",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "types-requests>=2.32.0.20250328",
    "types-toml>=0.10.8.20240310",
    "yt-dlp-types>=0.0.15",
]
